# vocab_game

./: index.py  pyproject.toml
client/public/: index.html
client/src/: App.svelte
src/: main.py
tests/: unit_tests.py
