[tool.poetry]
name = "vocab"
version = "0.1.0"
description = ""
authors = ["Abdul-213 <m.abdulhannan.ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymultidictionary = "^1.2.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
